# CARP-S

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LOCAL_DEVELOPMENT.md  MANIFEST.in  Makefile  PARALLEL.md  README.md  compile.sh  compile_noctua2.sh  fix_optimizer_name.ipynb  generate_problems.ipynb  generate_problems_hpobench.ipynb  load_all_data.py  mkdocs.yaml  ng_pip_freeze.txt  pip_freeze_dehb.txt  pip_freeze_mfpbench.txt  pymoo_pip_freeze.txt  pyproject.toml  requirements.txt  ruff.toml  rundata.json  setup.py  skopt_pip_freeze.txt  smacbenchmarking.db  start_container.sh  start_container_noctua2.sh  test_container_benchmark.sh  tmp.ipynb  versions.json
.github/workflows/: doc-deploy.yml  docs.yml  pre-commit.yml  pytest.yml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/changelog/: index.html
0.1.0/commands/: index.html
0.1.0/contributing/: index.html
0.1.0/installation/: index.html
0.1.0/search/: search_index.json
carps/: __init__.py  cli.py  run.py  run_from_db.py  runenv.py
carps/analysis/: calc_hypervolume.py  concat_rundata.py  critical_difference.py  final_performance.py  gather_data.py  gather_data_slurm.py  generate_report.py  interval_estimates.py  performance_over_time.py  plot.ipynb  plot_ranking.py  plot_relative_perf.py  process_data.py  run_autorank.py  superplotting.py  utils.py
carps/benchmarks/: COLLECTIONS.md  bbob.py  dummy_problem.py  hpo_b.py  hpo_bench.py  manyaffinebbob.py  mfpbench.py  problem.py  pymoo.py  wrapper.py  yahpo.py
carps/configs/: base.yaml  logger.yaml  runfromdb.yaml
carps/container/: container_script_optimizer.py  container_script_problem.py  container_script_runner.py  container_script_task.py  create_cluster_configs.py  py_experimenter.yaml  wrapper.py
carps/experimenter/: create_cluster_configs.py  create_cluster_configs_subselection.py  py_experimenter.yaml  scrape_results_to_db.py
carps/loggers/: abstract_logger.py  database_logger.py  file_logger.py
carps/objective_functions/: COLLECTIONS.md  bbob.py  dummy_problem.py  hpo_b.py  hpo_bench.py  mfpbench.py  objective_function.py  pymoo.py  yahpo.py
carps/optimizers/: ax.py  dehb.py  dummy_optimizer.py  hebo.py  nevergrad.py  optimizer.py  optuna.py  random_search.py  scikit_optimize.py  smac14.py  smac20.py  synetune.py
carps/tasks/: __init__.py
carps/utils/: check_missing.py  configuration.py  env_vars.py  exceptions.py  generate_tasks.py  index_configs.py  logging.py  loggingutils.py  overridefinder.py  pareto_front.py  requirements.py  running.py  task.py  trials.py  types.py
container/: env.def
container_recipes/: container_runner.recipe  general_requirements_container_optimizer.txt  general_requirements_container_problem.txt  general_requirements_container_runner.txt  hydra_initializer.recipe  runner.recipe
container_recipes/DUMMY_Optimizer/: DUMMY_Optimizer.recipe  DUMMY_Optimizer_requirements.txt
container_recipes/DUMMY_Problem/: DUMMY_Problem.recipe
container_recipes/bbob/: bbob_container.recipe
container_recipes/bohb/: bohb_optimizer.recipe
container_recipes/bohb_Optimizer/: bohb_Optimizer.recipe  bohb_Optimizer_requirements.txt
container_recipes/dummy_benchmark/: dummy_benchmark.recipe
container_recipes/dummy_optimizer/: dummy_optimizer.recipe
container_recipes/general/: exp_config_generator.recipe  general_requirements_container_problem.txt  general_requirements_container_runner.txt  hydra_initializer.recipe  runner.recipe
container_recipes/hpob/: hpob_container.recipe
container_recipes/hpobench/: hpobench_container.recipe
container_recipes/yahpo/: yahpo_container.recipe  yahpo_requirements.txt
docs/: api.rst  commands.md  conf.py  index.md  installation.md
docs/contributing/: contributing-a-benchmark.md  contributing-an-optimizer.md
docs/guides/: containers.md  database.md  first-steps.md  hydra.md  large-scale-benchmarking.md  using-carps.md
docs/images/: smac_benchmarking_containers.drawio
examples/: myexample.py
images/: smac_benchmarking_containers.drawio
notebooks/: bbobvizier.ipynb  benchmark_footprint.ipynb  calc_runtime.py  define_runtimes.py  generate_report.py  inspect_problems.ipynb  plot.ipynb  sketch_plots.ipynb  subselect.ipynb  subsets.ipynb  subsets2.ipynb
runscripts/: run_BBOB_smac20blackbox.sh
scripts/: build_containers.sh  build_env.sh  build_envs.sh  build_superenv.sh  container_run_from_db.sh  convert_logs_csv_to_parquet.py  create_experiments.sh  create_experiments_in_db.sh  create_exps.sh  install_optimizer.sh  install_yahpo.sh  launch_missing.py  patch_yahpo_configspace.py  prepare_subselection_data.py  prepare_yahpo.sh  run_BB.sh  run_BB_BBOB.sh  run_BB_HPOB.sh  run_BB_HPOBench.sh  run_BB_YAHPO.sh  run_BB_subselection.sh  run_MF.sh  run_MF_HPOBench.sh  run_MF_MFPBench.sh  run_MF_YAHPO.sh  run_MF_subselection.sh  run_MO.sh  run_MOMF.sh  run_MOMF_subselection.sh  run_MO_subselection.sh  run_from_db.sh  run_small.sh  start_container_noctua2.sh
smacbenchmarking/: logger.py  run.py  run_from_db.py
smacbenchmarking/benchmarks/: bbob.py  container.py  dummy_problem.py  hpo_b.py  hpo_bench.py  loggingproblem.py  loggingproblemwrapper.py  manyaffinebbob.py  problem.py  yahpo.py
smacbenchmarking/configs/: base.yaml  database.yaml  logger.yaml
smacbenchmarking/container/: container_app.py  container_optimizer.py  container_script_optimizer.py  container_script_problem.py  container_script_runner.py  containerized_problem_client.py  create_cluster_configs.py  py_experimenter.cfg  py_experimenter.yaml  pyexperimenter_runner.py  run_containers.py  run_containers_old.py  start_container.sh  wrapper.py
subselection/: README.md  comparing_subset_selection.ipynb  create_subset_configs.py  decide.ipynb  get_MO_fullset.py  get_fullset.py  inspect.ipynb  parse_new_results.ipynb  validate_ranking.ipynb  validate_ranking2.ipynb  visualize.ipynb
tests/: test_configs.py  test_hpobench_instantiation.py  test_myfile.py  test_optimizers.py  test_tasks.py
v0.1.0/: 404.html  index.html
v0.1.0/changelog/: index.html
(+20272 files in other folders)
